# psqlpack

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  Makefile.toml  README.md  README.md.orig  Readme.md  package.sh  psqlpack.sh  psqlpackage.sh  publish.sh  release.sh  report.sh  sql.sh
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: main.rs  operation.rs
dacpac/: .gitignore  Cargo.toml
dacpac/src/: ast.rs  connection.rs  dacpac.rs  errors.rs  graph.rs  lexer.rs  lib.rs
docs/: index.md
docs/actions/: extract.md  new.md  package.md  publish.md  report.md  script.md
pg_query/: Cargo.toml  README.md
pg_query/src/: lib.rs
projects/complex/: project.json
projects/complex/data/tables/: table_coefficients.sql
projects/complex/extensions/: postgis.sql
projects/complex/geo/: schema.sql
projects/complex/geo/functions/: fn_do_any_coordinates_fall_inside.sql
projects/complex/geo/tables/: states.sql
projects/complex/reference_data/functions/: fn_countries.sql  fn_states.sql
projects/complex/scripts/seed/: data.constant_values.sql  data.constant_versions.sql  data.parameters.sql  data.taxes.sql  geo.states.sql  reference_data.countries.sql
projects/complex/types/: ident_type_t.sql
projects/simple/: project.json
projects/simple/public/tables/: public.expense_status.sql  public.organisation.sql  public.vendor.sql
psqlpack/: .gitignore  Cargo.toml  build.rs
psqlpack/src/: ast.rs  connection.rs  dacpac.rs  errors.rs  graph.rs  lib.rs  operation.rs  package.rs  psqlpack.rs  semver.rs
psqlpack/src/model/: capabilities.rs  delta.rs  extension.rs  mod.rs  package.rs  profiles.rs  project.rs  template.rs
psqlpack/src/operation/: mod.rs  package.rs
psqlpack/src/sql/: ast.rs  bootstrap.rs  lexer.rs  mod.rs  parser.lalrpop  tests.rs
psqlpack/tests/: publish.rs  publish_sql.rs
psqlpack/tests/common/: mod.rs
sample/: project.json
sample/public/tables/: public.tax_table.sql
samples/: psqlpack.sh
samples/complex/: complex.psqlproj  local.publish  project.json
samples/complex/data/: schema.sql
samples/complex/data/tables/: constant_values.sql  constant_versions.sql  idents.sql  parameters.sql  table_versions.sql  taxes.sql
samples/complex/geo/functions/: fn_do_any_coordinates_fall_inside.sql
samples/complex/reference_data/: schema.sql
samples/complex/reference_data/tables/: countries.sql  states.sql
samples/complex/scripts/seed/: data.idents.sql  data.table_coefficients.sql  data.table_versions.sql  reference_data.states.sql
samples/complex/types/: tax_classification_t.sql
samples/simple/: publish_profile.json
samples/simple/public/tables/: public.tax_table.sql  public.vendor.sql
samples/trivial/: local.publish  project.json  publish_profile.json  trivial.psqlproj
samples/trivial/public/tables/: public.person.sql
src/: ast.rs  dacpac.rs  gen.rs  lexer.rs  main.rs  sql.lalrpop  sql.rs
