[package]
name = "psqlpack-cli"
version = "0.1.0"
authors = ["Paul Mason <paul@form1.co.nz>", "Justin Latimer <justinlatimer@gmail.com>"]

[[bin]]
name = "psqlpack"
path = "src/main.rs"

[dependencies]
clap = "2.26"
slog = "2"
slog-term = "2"
psqlpack = { path = "../psqlpack/" }

[features]
symbols = ["psqlpack/symbols"]