[package]
name = "psqlpack-cli"
version = "0.1.0"
authors = ["Paul Mason <paul@form1.co.nz>", "Justin Latimer <justinlatimer@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"

[[bin]]
name = "psqlpack"
path = "src/main.rs"

[dependencies]
clap = "2.26"
slog = "2.1"
slog-term = "2.3"
psqlpack = { path = "../psqlpack/" }

[features]
symbols = ["psqlpack/symbols"]