[package]
name = "psqlpack-cli"
version = "0.3.0"
authors = ["Paul Mason <paul@form1.co.nz>", "Justin Latimer <justinlatimer@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
edition = "2018"

[[bin]]
name = "psqlpack"
path = "src/main.rs"

[dependencies]
clap = { version = "2.32", features = [ "wrap_help" ] }
slog = "2.4"
slog-term = "2.4"
psqlpack = { path = "../psqlpack/" }

[features]
symbols = ["psqlpack/symbols"]