[package]
name = "pg-dacpac"
version = "0.1.0"
authors = ["Paul Mason <paul@form1.co.nz>"]
build = "build.rs"

[dependencies]
error-chain = "0.10"
lazy_static = "0.1"
lalrpop-util = "0.12.5"
log = "0.3.6"
postgres = "0.14"
regex = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
walkdir = "1"
zip = "0.2"

[build-dependencies]
lalrpop = "0.12.5"