[package]
name = "pg_query"
version = "0.6.0"
authors = ["Paul Mason <paul@form1.co.nz>"]
build = "build/build.rs"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
uuid = "0.8"

[build-dependencies]
serde = "1.0"
serde_json = "1.0"
