[package]
name = "pg_query"
version = "0.6.0"
authors = ["Paul Mason <paul@form1.co.nz>"]
build = "build/build.rs"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.3"

[build-dependencies]
protobuf-codegen-pure = "2.3"
