[package]
name = "psqlpack"
version = "0.3.0"
authors = ["Paul Mason <paul@form1.co.nz>", "Justin Latimer <justinlatimer@gmail.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
readme = "../README.md"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "1"
error-chain = "0.12"
glob = "0.2"
lazy_static = "1.2"
lalrpop-util = "0.16"
slog = { version = "2.4", features = ["max_level_trace", "release_max_level_trace"] }
slog-stdlog = "3.0"
postgres = { version = "0.15", features = ["with-serde_json"] }
regex = "1.0"
rust_decimal = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
zip = "0.4"
petgraph = "0.4"

[build-dependencies]
lalrpop = "0.16"

[dev-dependencies]
spectral = "0.6.0"

[features]
symbols = []