[package]
name = "psqlpack"
version = "0.7.1"
authors = ["Paul Mason <paul@form1.co.nz>", "Justin Latimer <justinlatimer@gmail.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
readme = "../README.md"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "3"
error-chain = "0.12"
glob = "0.3"
lazy_static = "1.4"
lalrpop-util = "0.19"
petgraph = "0.5"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
regex = "1.0"
rust_decimal = "1.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_trace"] }
slog-stdlog = "4.0"
toml = "0.5"
zip = "0.5"

[build-dependencies]
lalrpop = "0.19"

[dev-dependencies]
spectral = "0.6.0"

[features]
symbols = []